--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,27 @@
 .name_box {
     background-color: #4aaaa5;
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-family: 'Georgia', Times, "Times New Roman", serif;
     color: white;
-
+    width: 110px;
+    height: 40px;
+    padding-top: 20px;
+    padding-left: 15px;
+    font-size: 110%
+    
 }
 
 .link_box {
     font-size: 10px;
     color: #dddddd;
+    padding-bottom: 20px;
+    padding-right: 15px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    
 }
 
 a:link {
-    color: red;
+    color: #cccccc;
+    text-decoration: none;
 }
 
 a:visited {
@@ -29,7 +39,11 @@ a:active {
 header {
     background-color: #ffffff;
     border-color: #cccccc;
-
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: 960px;
+    margin: auto;
 }
 
 footer {
@@ -44,18 +58,28 @@ footer {
 }
 
 body {
-    background-color: #ffffff;
-    border-color: #dddddd;
+    background-image: url("../images/gravel.png");
 }
 
 .first_page {
     width: 960px;
+    border-color: #dddddd;
+    margin: auto;
 }
 
 hr {
     color: #dddddd;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 h1 {
     color: #4aaaa5;
+    font-size: 110%;
+    padding-left: 15px;
+    padding-top: 10px;
+}
+
+section {
+    background-color: #ffffff;
 }
