--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,8 @@
     height: 40px;
     padding-top: 20px;
     padding-left: 15px;
-    font-size: 110%
+    font-size: 110%;
+    text-align: left; 
     
 }
 
@@ -82,4 +83,18 @@ h1 {
 
 section {
     background-color: #ffffff;
+}
+
+.inner_block {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+img {
+    float: left;
+    margin-right: 15px;
+}
+
+.clear_fix {
+    overflow: auto;
 }
