--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,15 +8,19 @@
     padding-left: 15px;
     font-size: 110%;
     text-align: left; 
+    margin-left: 50px;
     
 }
 
 .link_box {
-    font-size: 10px;
+    font-size: 16px;
     color: #dddddd;
     padding-bottom: 20px;
     padding-right: 15px;
+    width: 250px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    display: flex;
+    justify-content: space-evenly;
     
 }
 
@@ -43,23 +47,33 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    width: 960px;
-    margin: auto;
+    width: 100%;
+    position: relative;
+    left: 0;
+    right: 0;
+    border-bottom-style: solid;
+    border-bottom-width: 5px;
+    border-bottom-color: #dddddd;
 }
 
 footer {
     background-color: #666666;
     position: fixed;
-    bottom: 0;
     border-top: #4aaaa5;
-    border-width: 5px;
+    border-top-style: solid;
+    border-top-width: 10px;
+    bottom: 0;
+    left: 0;
     text-align: center;
-    font-size: 5px;
+    font-size: 8px;
     width: 100%;
+    height: 30px;
+    color: #777777;
 }
 
 body {
     background-image: url("../images/gravel.png");
+    position: relative;
 }
 
 .first_page {
@@ -72,17 +86,19 @@ hr {
     color: #dddddd;
     margin-left: 15px;
     margin-right: 15px;
+    margin-bottom: 15px;
 }
 
 h1 {
     color: #4aaaa5;
     font-size: 110%;
     padding-left: 15px;
-    padding-top: 10px;
+    padding-top: 20px;
 }
 
 section {
     background-color: #ffffff;
+    height: 350px;
 }
 
 .inner_block {
@@ -97,4 +113,12 @@ img {
 
 .clear_fix {
     overflow: auto;
+    position: relative;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+}
+
+p {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
 }
