--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,37 @@
 .name_box {
     background-color: #4aaaa5;
     font-family: 'Georgia', Times, "Times New Roman", serif;
+    font-weight: bold;
     color: white;
-    width: 110px;
-    height: 40px;
-    padding-top: 20px;
-    padding-left: 15px;
+    width: 130px;
+    height: 45px;
+    padding-top: 25px;
+    padding-left: 20px;
     font-size: 110%;
     text-align: left; 
-    margin-left: 50px;
+    margin-left: 60px;
     
 }
 
 .link_box {
-    font-size: 16px;
+    font-size: 12px;
     color: #dddddd;
-    padding-bottom: 20px;
-    padding-right: 15px;
+    padding-bottom: 30px;
+    padding-right: 35px;
     width: 250px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     display: flex;
     justify-content: space-evenly;
     
+}
+
+.link_style {
+    border-left-style: solid;
+    border-right-style: solid;
+    border-width: 1px;
+    border-color: #cccccc;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 a:link {
@@ -48,12 +58,14 @@ header {
     justify-content: space-between;
     align-items: flex-end;
     width: 100%;
-    position: relative;
+    position: absolute;
+    top: 0;
     left: 0;
     right: 0;
     border-bottom-style: solid;
-    border-bottom-width: 5px;
-    border-bottom-color: #dddddd;
+    border-bottom-width: 2px;
+    border-bottom-color: #cccccc;
+    height: 70px;
 }
 
 footer {
@@ -61,19 +73,18 @@ footer {
     position: fixed;
     border-top: #4aaaa5;
     border-top-style: solid;
-    border-top-width: 10px;
+    border-top-width: 5px;
     bottom: 0;
     left: 0;
     text-align: center;
     font-size: 8px;
     width: 100%;
     height: 30px;
-    color: #777777;
+    color: #cccccc;
 }
 
 body {
     background-image: url("../images/gravel.png");
-    position: relative;
 }
 
 .first_page {
@@ -83,27 +94,35 @@ body {
 }
 
 hr {
-    color: #dddddd;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-bottom: 15px;
+    color: #777777;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
 
 h1 {
     color: #4aaaa5;
-    font-size: 110%;
-    padding-left: 15px;
-    padding-top: 20px;
+    font-family: 'Georgia', Times, "Times New Roman", serif;
+    font-size: 120%;    
+    padding-left: 20px;
+    padding-top: 10px;
+    font-weight: bold;
 }
 
 section {
     background-color: #ffffff;
-    height: 350px;
+    height: 500px;
+    width: 960px;
+    position: relative;
+    top: 150px;
+    border: solid;
+    border-width: 2px;
+    border-color: #cccccc;
 }
 
 .inner_block {
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 img {
@@ -118,7 +137,13 @@ img {
     color: #777777;
 }
 
-p {
+.p_block {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
+}
+
+.p_foot {
+    position: relative;
+    top: 10px;
+    
 }
