--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ a:visited {
 }
 
 a:hover {
-    color: hotpink;
+    color: #4aaaa5;
 }
 
 a:active {
@@ -77,10 +77,11 @@ footer {
     bottom: 0;
     left: 0;
     text-align: center;
-    font-size: 8px;
+    font-size: 10px;
     width: 100%;
-    height: 30px;
+    height: 40px;
     color: #cccccc;
+    flex-shrink: 0;
 }
 
 body {
@@ -144,6 +145,6 @@ img {
 
 .p_foot {
     position: relative;
-    top: 10px;
+    top: 16px;
     
 }
