--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ h1 {
 
 section {
     background-color: #ffffff;
-    height: 500px;
+    height: 75%;
     width: 960px;
     position: relative;
     top: 150px;
