--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ body {
 hr {
     color: #777777;
     margin-left: 20px;
-    margin-right: 20px;
+    margin-right: 15px;
     margin-bottom: 20px;
 }
 
@@ -112,7 +112,7 @@ h1 {
 
 section {
     background-color: #ffffff;
-    height: 75%;
+    height: 500px;
     width: 960px;
     position: relative;
     top: 150px;
@@ -147,4 +147,36 @@ img {
     position: relative;
     top: 16px;
     
+}
+
+input {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    border: 1px solid #cccccc;
+    width: 100%;
+    height: 20px;
+    padding-top: 5px;
+}
+
+textarea {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    border: 1px solid #cccccc;
+    width: 917px;
+    height: 200px;
+}
+
+.form_format {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 14px;
+    color: #777777;
+}
+
+button {
+    background-color: #4aaaa5;
+    color: white;
+    text-align: center;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    width: 80px;
+    height: 30px;
+    border: 1px solid #4aaaa5;
+    font-size: 14px;
 }
