--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@
     font-size: 12px;
     color: #dddddd;
     padding-bottom: 30px;
-    padding-right: 35px;
+    padding-right: 16%;;
     width: 250px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     display: flex;
@@ -211,7 +211,8 @@ button {
 
 .new_grid {
     display: grid;
-    justify-content: center;
+    justify-content: left;
+    width: 66%;
     grid-template-columns: auto auto;
     grid-template-areas:
         "pj pj"
