--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,7 @@ input {
     border: 1px solid #cccccc;
     width: 100%;
     height: 20px;
-    padding-top: 5px;
+    padding-top: 0px;
 }
 
 
@@ -171,6 +171,12 @@ textarea {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 14px;
     color: #777777;
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+#low_height {
+    height: 20px;
 }
 
 button {
